crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__required_import_multiline_docstring.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- - kind:
      name: MissingRequiredImport
      body: "Missing required import: `from __future__ import annotations`"
      suggestion: "Insert required import: `from __future__ import annotations`"
      fixable: true
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 0
    fix:
      content: "\nfrom __future__ import annotations"
      location:
        row: 3
        column: 3
      end_location:
        row: 3
        column: 3
    parent: ~

