crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__required_import_with_alias_comments_and_newlines.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
comments_and_newlines.py:1:1: I002 [*] Missing required import: `from __future__ import annotations as _annotations`
  |
1 | #!/usr/bin/env python3
  |  I002
2 | # A copyright notice could go here
  |
  = help: Insert required import: `from future import annotations as _annotations`

ℹ Fix
2 2 | # A copyright notice could go here
3 3 | 
4 4 | # A linter directive could go here
  5 |+from __future__ import annotations as _annotations
5 6 | 
6 7 | x = 1


