crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__required_import_with_alias_docstring.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
docstring.py:1:1: I002 [*] Missing required import: `from __future__ import annotations as _annotations`
  |
1 | """Hello, world!"""
  |  I002
2 | 
3 | x = 1
  |
  = help: Insert required import: `from future import annotations as _annotations`

ℹ Fix
1 1 | """Hello, world!"""
  2 |+from __future__ import annotations as _annotations
2 3 | 
3 4 | x = 1


