crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__required_import_with_alias_docstring_with_continuation.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
docstring_with_continuation.py:1:1: I002 [*] Missing required import: `from __future__ import annotations as _annotations`
  |
1 | """Hello, world!"""; x = \
  |  I002
2 |     1; y = 2
  |
  = help: Insert required import: `from future import annotations as _annotations`

ℹ Fix
1   |-"""Hello, world!"""; x = \
  1 |+"""Hello, world!"""; from __future__ import annotations as _annotations; x = \
2 2 |     1; y = 2


