crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__required_import_with_alias_existing_import.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
existing_import.py:1:1: I002 [*] Missing required import: `from __future__ import annotations as _annotations`
  |
1 | from __future__ import generator_stop
  |  I002
2 | import os
  |
  = help: Insert required import: `from future import annotations as _annotations`

ℹ Fix
  1 |+from __future__ import annotations as _annotations
1 2 | from __future__ import generator_stop
2 3 | import os


