crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__required_import_with_alias_multiline_docstring.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
multiline_docstring.py:1:1: I002 [*] Missing required import: `from __future__ import annotations as _annotations`
  |
1 | """a
  |  I002
2 | b"""
3 | # b
  |
  = help: Insert required import: `from future import annotations as _annotations`

ℹ Fix
1 1 | """a
2 2 | b"""
3 3 | # b
  4 |+from __future__ import annotations as _annotations
4 5 | import os


