crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__section_order_sections.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
sections.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / from __future__ import annotations
2 | | import os
3 | | import sys
4 | | import pytz
5 | | import django.settings
6 | | from library import foo
7 | | from . import local
  |
  = help: Organize imports

ℹ Fix
1  1  | from __future__ import annotations
   2  |+
2  3  | import os
3  4  | import sys
   5  |+
4  6  | import pytz
   7  |+
5  8  | import django.settings
   9  |+
6  10 | from library import foo
   11 |+
7  12 | from . import local


